--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.4.3",
     "aws-amplify": "^3.0.21",
     "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2"
